# k_filter

./: .gitignore  CMakeLists.txt  Makefile  README.md  ROADMAP.md
.github/workflows/: ci.yml
examples/: filter_test.c
hdl/: README.md
hdl/verilog/: biquad_df1.v  dc_blocker_q15.v  deadband.v  ema_q15.v  fir5.v  median5.v  moving_avg.v  slew_limiter.v  tb.v
hdl/vhdl/: biquad_df1.vhd  dc_blocker_q15.vhd  deadband.vhd  ema_q15.vhd  fir5.vhd  median5.vhd  moving_avg.vhd  slew_limiter.vhd  tb_biquad.vhd  tb_dc.vhd  tb_dead.vhd  tb_ema.vhd  tb_fir.vhd  tb_mavg.vhd  tb_med5.vhd  tb_slew.vhd
include/: k_filter.h  k_filter_fixed.h
sim/: bode.py  compare.py  filters.py  fixed_models.py  hdl_parity.py  metrics.py  parity_test.py  signals.py  simulate.py
src/: k_filter.c  k_filter_design.c  k_filter_fixed.c
test/: bench.c  fixed_dump.c  footprint.c  k_test.h  parity_dump.c  test_filters.c
